grammars/qvr/vcs/parsers/HEAD/source/grammar.js
    source_file: $ => seq(repeat($._top), $._eof),

    /* Allow blank lines between top-level statements: the scanner
     * emits a NEWLINE for each, and we tolerate them here. */
    _top: $ => choice($._statement, $._newline),

    _qiec_type_expr: $ => choice(
      $.qiec_function_type,
      $.qiec_product_type,
      $.qiec_type_application,
      $.qiec_type_name,
      $.qiec_type_paren,
    ),

    /* A non-arrow, non-product type factor. Declaration signatures use this
     * rule on the left of their own ``*`` / ``->`` separators so Panproto's
     * named ``arguments`` and ``result`` fields cannot be swallowed by a
     * nested expression node. Parentheses remain available when a genuinely
     * higher-order argument type is needed. */
    qiec_static_argument: $ => field('value', $._qiec_type_expr),
    qiec_type_name: $ => field('name', $.identifier),
    qiec_index_literal: $ => field('value', $.integer),
    qiec_call_computation: $ => seq(
      field('callee', $.identifier),
      optional(seq(
        '[',
        field('static_arguments', $.qiec_static_argument),
        repeat(seq(',', field('static_arguments', $.qiec_static_argument))),
        optional(','),
        ']',
      )),
      '(',
      optional(seq(
        field('arguments', $._qiec_value),
        repeat(seq(',', field('arguments', $._qiec_value))),
        optional(','),
      )),
      ')',
      $._newline,
    ),

    /* Invoking the continuation of the enclosing handler clause. The
     * resumption is not a named local, so there is one way to invoke it and
     * no second call syntax to keep in step. */
    _qiec_value: $ => choice(
      $.qiec_constructor_value,
      $._let_arith,
    ),

    program_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'program',
      field('name', $.identifier),
      optional(bracketedList($, '(', field('params', $._program_param), ')')),
      ':',
      field('domain', $._object_expr),
      '->',
      field('codomain', $._object_expr),
      optional(field('options', $.option_block)),
      $._newline,
      $._indent,
      repeat(choice(field('steps', $._program_step), $._newline)),
      $.return_step,
      $._dedent,
    ),

    _program_param: $ => choice(
      $.identifier,
      $.typed_program_param,
    ),

    typed_program_param: $ => seq(
      field('name', $.identifier),
      ':',
      field('kind', $._param_kind),
    ),

    _param_kind: $ => choice(
      $.object_kind,
      $.scalar_kind,
      $.morphism_kind,
    ),

    object_kind: $ => choice('FinSet', 'Space', 'Object'),
    scalar_kind: $ => choice('Real', 'Nat'),

    morphism_kind: $ => seq(
      'Mor',
      '[',
      field('domain', $._object_expr),
      ',',
      field('codomain', $._object_expr),
      ']',
    ),

    _program_step: $ => choice(
      $.sample_step,
      $.observe_step,
      $.marginalize_step,
      $.let_step,
      $.score_step,
    ),

    sample_step: $ => seq(
      'sample',
      field('vars', $._var_pattern),
      optional(seq(':', field('index', $._object_expr))),
      '<-',
      field('morphism', $.identifier),
      optional(bracketedList($, '(', field('args', $._draw_arg), ')')),
      optional(field('options', $.option_block)),
      $._newline,
    ),

    observe_step: $ => seq(
      'observe',
      field('vars', $._var_pattern),
      optional(seq(':', field('index', $._object_expr))),
      '<-',
      field('morphism', $.identifier),
      optional(bracketedList($, '(', field('args', $._draw_arg), ')')),
      optional(field('options', $.option_block)),
      $._newline,
    ),

    marginalize_step: $ => seq(
      'marginalize',
      field('var', $.identifier),
      optional(seq(':', field('index', $._object_expr))),
      '<-',
      field('morphism', $.identifier),
      optional(bracketedList($, '(', field('args', $._draw_arg), ')')),
      optional(field('options', $.option_block)),
      $._newline,
      $._indent,
      repeat1(choice(field('scope', $._program_step), $._newline)),
      $._dedent,
    ),

    let_step: $ => seq(
      'let',
      field('name', $.identifier),
      '=',
      field('value', $._let_arith),
      $._newline,
    ),

    // Score / factor step: ``score NAME = EXPR``. The value of
    // ``EXPR`` is added to the program's ``log_joint`` (the
    // deduction analog of an ``observe`` whose log-density comes
    // from a chart goal weight or any other tensor expression).
    score_step: $ => seq(
      'score',
      field('name', $.identifier),
      '=',
      field('value', $._let_arith),
      $._newline,
    ),

    return_step: $ => seq(
      'return',
      field('return', $._return_pattern),
      $._newline,
    ),

    _draw_arg: $ => choice(
      $.bracket_index_arg,
      $.family_call_arg,
      $.list_arg,
      $.identifier,
      $.signed_number,
    ),

    // Distribution-call expression at a draw-arg position, e.g.
    // `Mixture([0.3, 0.7], [PointMass(0), Poisson(rate)])`. The
    // compiler recurses into `args` to build the inner distribution
    // before passing it to the outer family's builder. See the
    // measure-algebra design note for the operator vocabulary.
    family_call_arg: $ => prec(2, seq(
      field('family', $.identifier),
      '(',
      optional(field('args', commaSep1($._draw_arg))),
      ')',
    )),

    // List-of-draw-args, e.g. `[0.3, 0.7]` for mixture weights or
    // `[PointMass(0), Poisson(rate)]` for mixture components. Mirrors
    // the let-expression list literal but at the draw-arg position.
    list_arg: $ => seq(
      '[',
      optional(commaSep1($._draw_arg)),
      ']',
    ),

    bracket_index_arg: $ => prec(1, seq(
      field('name', $.identifier),
      '[',
      field('index', $._object_expr),
      ']',
    )),

    /* Variable patterns share the parenthesized-tuple shape with
     * return patterns: a bare name or ``(a, b)``. */
    _var_pattern: $ => choice($.identifier, $.var_tuple),

    var_tuple: $ => seq(
      '(',
      commaSep1($.identifier),
      optional(','),
      ')',
    ),

    _return_pattern: $ => choice(
      $.identifier,
      $.return_labeled_tuple,
      $.return_tuple,
    ),

    return_tuple: $ => seq(
      '(',
      commaSep1($.identifier),
      optional(','),
      ')',
    ),

    return_labeled_tuple: $ => prec(1, seq(
      '(',
      commaSep1($.return_label_entry),
      optional(','),
      ')',
    )),

    return_label_entry: $ => seq(
      field('label', $.identifier),
      ':',
      field('var', $.identifier),
    ),

    // -----------------------------------------------------------------
    // type expressions
    // -----------------------------------------------------------------

    _object_expr: $ => choice(
      $.object_coproduct,
      $.object_slash,
      $.object_product,
      $.discrete_constructor,
      $.continuous_constructor,
      $.object_effect_apply,
      $.object_atom,
      $.object_paren,
    ),

    object_atom: $ => $.identifier,
    object_product: $ => prec.left(PREC.object_product, seq(
      field('left', $._object_expr),
      '*',
      field('right', $._object_expr),
    )),

    _numeric_literal: $ => choice($.integer, $.float),

    // -----------------------------------------------------------------
    // option block
    // -----------------------------------------------------------------

    option_block: $ => bracketedList($, '[', $.option_entry, ']'),

    option_entry: $ => seq(
      field('key', $.identifier),
      optional(seq('=', field('value', $._option_value))),
    ),

    /* Numeric option values are signed, mirroring draw arguments. */
    _option_value: $ => choice(
      $.option_list,
      $.option_call,
      $.identifier,
      $.signed_number,
      $.string,
    ),

    _let_arith: $ => choice($.let_binop, $.let_unary, $._let_atom),

    let_var: $ => $.identifier,
    let_literal: $ => $._numeric_literal,

    let_call: $ => prec(1, seq(
      field('func', $.identifier),
      '(',
      optional(field('args', commaSep1($._let_arith))),
      ')',
    )),

    let_binop: $ => choice(
      prec.left(PREC.let_or, seq(
        field('left', $._let_arith),
        field('op', '||'),
        field('right', $._let_arith),
      )),
      prec.left(PREC.let_and, seq(
        field('left', $._let_arith),
        field('op', '&&'),
        field('right', $._let_arith),
      )),
      prec.left(PREC.let_compare, seq(
        field('left', $._let_arith),
        field('op', choice('==', '!=', '<', '<=', '>', '>=')),
        field('right', $._let_arith),
      )),
      prec.left(PREC.let_add, seq(
        field('left', $._let_arith),
        field('op', choice('+', '-')),
        field('right', $._let_arith),
      )),
      prec.left(PREC.let_mul, seq(
        field('left', $._let_arith),
        field('op', choice('*', '/', '%')),
        field('right', $._let_arith),
      )),
    ),

    // -----------------------------------------------------------------
    // doc-comment groups
    // -----------------------------------------------------------------

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    integer: _ => /[0-9]+/,
    /* Floats admit trailing-dot (``1.``), leading-dot (``.5``), and
     * exponent-only (``1e-3``) forms alongside ``1.0`` and
     * ``2.5e-3``. */
    float: _ => /[0-9]+\.[0-9]*([eE][+-]?[0-9]+)?|\.[0-9]+([eE][+-]?[0-9]+)?|[0-9]+[eE][+-]?[0-9]+/,
    signed_number: $ => seq(optional('-'), choice($.integer, $.float)),
